--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.cakeslice.outline-effect": "https://github.com/cakeslice/Outline-Effect.git",
+    "com.nobi.roundedcorners": "https://github.com/kirevdokimov/Unity-UI-Rounded-Corners.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.mathematics": "1.3.2",
